--- a/bindgen-integration/Cargo.toml
+++ b/bindgen-integration/Cargo.toml
@@ -14,6 +14,7 @@ cc = "1.0"
 static = ["bindgen/static"]
 runtime = ["bindgen/runtime"]
 
+testing_only_docs = ["bindgen/testing_only_docs"]
 testing_only_extra_assertions = ["bindgen/testing_only_extra_assertions"]
 testing_only_libclang_9 = ["bindgen/testing_only_libclang_9"]
 testing_only_libclang_5 = ["bindgen/testing_only_libclang_5"]
